add documentation for displaying single product
